<resources>
    <string name="app_name">Ankasa</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tap_here_for_reset">Tap Here For Reset</string>
    <string name="did_you_forgot_password">Did You Forgot Password?</string>
    <string name="textInForgot">You’ll get message soon on your email</string>
    <string name="send">Send</string>
    <string name="booking_pass">Booking Pass</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>