<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        tools:context=".forgot.ForgotPassActivity">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/ic_btnback" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="72dp"
            android:text="@string/forgot"
            android:textColor="@color/colorHeader1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="43dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:paddingTop="0dp"
                android:paddingBottom="17dp"
                android:textColor="@android:color/black"
                android:textColorHighlight="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="27dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/btn_primary"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="6dp"
                android:alpha="0.18"
                android:background="@drawable/btn_primary" />
        </FrameLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="18dp"
            android:text="@string/textInForgot"
            android:textAlignment="center"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp" />

    </LinearLayout>
</layout>